manifests-aws/deploy-shopping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffeeshop-shopping-deploy
  labels:
    app: coffeeshop-shopping
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffeeshop-shopping
  template:
    metadata:
      labels:
        app: coffeeshop-shopping
    spec:
      serviceAccountName: aws-secrets-manager-sscsi-shopping
      volumes:
        - name: coffeeshop-shopping-secretvolume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: coffeeshop-shopping-spc
      containers:
        - name: eks-demo-coffeeshop-shopping
          image: <account_id>.dkr.ecr.<region>.amazonaws.com/mortredn/eks-demo-coffeeshop-shopping:latest
          resources:
            limits:
              cpu: "250m"
              memory: "512Mi"
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: coffeeshop-shopping-secretvolume
              mountPath: "/mnt/secrets-store"
              readOnly: true
