manifests-aws/svc-shopping.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeeshop-shopping-svc
spec:
  selector:
    app: coffeeshop-shopping
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
