manifests-aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: eks-demo-alb
    alb.ingress.kubernetes.io/subnets: <public_subnet_1_id>,<public_subnet_2_id>
    alb.ingress.kubernetes.io/certificate-arn: <acm_certificate_arn>
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: <domain_name>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-frontend-svc
                port:
                  number: 8080
          - path: /api/customer
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-customer-svc
                port:
                  number: 4000
          - path: /api/shopping
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-shopping-svc
                port:
                  number: 4000
